<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/secondary_background_color"
    android:padding="@dimen/_10sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/launcher_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/new_version_available"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/download_new_version"
        android:textAlignment="center"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/download"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/download"
        android:textAlignment="center"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>