<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_playlist"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@+id/close"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/close" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:hint="@string/playlist_name"
        android:textColorHint="@color/text_color"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/input_selector"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:cursorColor="@color/text_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@+id/close">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/_13ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:backgroundTint="@color/main_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/create"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistNameLayout"
        app:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>