<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.snstudio.hyper.feature.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".feature.home.HomeFragment">

        <com.snstudio.hyper.core.component.HyperColorizedBar
            android:id="@+id/colorizedBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconDrawables="@array/home_drawables"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleText="@string/home" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/highlightsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/highlights"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintTop_toBottomOf="@+id/colorizedBar" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerHighlights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highlightsTitle"
            tools:listitem="@layout/item_highlights" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/downloadTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/recent_downloads"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerHighlights" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerDownloads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downloadTitle"
            tools:listitem="@layout/item_highlights" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>