<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_background_color"
        android:paddingVertical="@dimen/_20sdp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toStartOf="@id/iv_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/background_color"
            android:padding="@dimen/_15sdp"
            android:text="@string/detail"
            android:textAlignment="viewStart"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_10sdp"
            app:icon="@drawable/ic_info"
            app:iconTint="@color/main_color"
            app:layout_constraintBottom_toTopOf="@id/btnDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:textAllCaps="false" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:backgroundTint="@color/background_color"
            android:padding="@dimen/_15sdp"
            android:text="@string/delete"
            android:textAlignment="viewStart"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_10sdp"
            app:icon="@drawable/ic_delete"
            app:iconTint="@color/main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnDetail"
            app:textAllCaps="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>