<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.snstudio.hyper.feature.picker.MediaPickerViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_info_background"
            android:drawableStart="@drawable/ic_info"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/music_already_added_info"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp"
            android:visibility="@{vm.containsItemIsEmptyObservable ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:backgroundTint="@color/main_color"
            android:padding="@dimen/_10sdp"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textAllCaps="false" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noMusicItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:drawableTop="@drawable/ic_music"
            android:gravity="center"
            android:text="@string/no_music"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp"
            android:visibility="@{vm.containsItemIsEmptyObservable ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>